[project]
name = "deepseek-freight-api"
version = "1.0.0"
description = "DeepSeek AI API for freight forwarding and logistics"
authors = [{name = "Your Name", email = "you@example.com"}]
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "requests==2.33.1",
    "pycryptodome==3.23.0"
]
